src/objects/Marketing_Information__c.object
<CustomObject>
    <description>Holds the Marketing Information for the User.</description>
    <fields>
        <fullName>Content__c</fullName>
        <description>Hold information in regards to the About This Product Tab for Product Selection</description>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Product Family related to the Marketing Information.</description>
        <label>Family</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Marketing Information (Family)</relationshipLabel>
        <relationshipName>Marketing_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Copy_Type__c</fullName>
        <description>Marketing Copy detailed header used in the HE product selector</description>
        <label>Marketing Copy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short College Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Retail Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Online Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New To This Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table of Contents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appropriate Courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appropriate Course(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Author Bio(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview/Tabbing Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Tips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut and Paste Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition/Rep Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forthcoming Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strengths/Weaknesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order in which the marketing content should be shown.  Used by the Product Selector to decide which marketing content to depict.</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the reference to the Product in which the Marketing Information is related to.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Marketing Information</relationshipLabel>
        <relationshipName>Marketing_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Related Product in which Marketing Information applies to. Utilized for Competitive Marketing Information.</description>
        <label>Related Product</label>
        <referenceTo>Apttus_Config2__RelatedProduct__c</referenceTo>
        <relationshipLabel>Marketing Information</relationshipLabel>
        <relationshipName>Marketing_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Used to indicate the type of Marketing Content information</description>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New To This Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table of Contents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appropriate Courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About the Author(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview/Tabbing Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Tips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut &amp; Paste E-Mails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forthcoming Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strengths/Weaknesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates the type of the Marketing Content. ex: About this Product and Rep Tools</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>About This Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Copy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Mar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>